Handle invite_url
